F-1 не доделал scss

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
-<footer class="footer">
+<footer class="footer container">
    <div class="footer__wrapper">
-      <h2 class="footer__wrapper-title">homemade ice cream made</h2>
-      <p class="footer__wrapper-subtitle">with passion</p>
+      <h2 class="footer__wrapper-title">HOMEMADE ICE CREAM MADE</h2>
+      <p class="footer__wrapper-subtitle">WITH PASSION</p>
    </div>
    <div class="footer__wrapper-socials">
       <ul class="footer__wrapper-list">
@@ -49,5 +49,11 @@
          >+61(0)383766284</a
       >
    </div>
-   <div class="footer__copyright">© 2022 - IceCream. All Rights Reserved.</div>
+   <span class="border__mobile"></span>
+   <!-- <span class="border__desktop"></span> -->
+   <div class="footer__copyright">
+      <p class="footer__copyright-subtitle">
+         © 2022 - IceCream. All Rights Reserved.
+      </p>
+   </div>
 </footer>
