--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -22,12 +22,14 @@
 }
 
 // Міксін для створення геометричних фігур \ширина\висота\закруглення кутів\рамка\тінь\колір фону\
-@mixin block($w: 100px,
+@mixin block(
+   $w: 100px,
    $h: auto,
    $radius: 0,
    $border: 0,
    $shadow: 0,
-   $bg: transparent) {
+   $bg: transparent
+) {
    width: $w;
    height: $h;
    border-radius: $radius;
@@ -67,20 +69,18 @@
 
 //  Ретінізоване зображення
 @mixin isRetinaDisplay() {
-
    @media (min-device-pixel-ratio: 2),
-   (min-resolution: 192dpi),
-   (min-resolution: 2dppx) {
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
       @content;
    }
 }
 
 //  Неретінізоване зображення
 @mixin isNotRetinaDisplay() {
-
    @media (max-device-pixel-ratio: 1),
-   (min-resolution: 96dpi),
-   (min-resolution: 1dppx) {
+      (min-resolution: 96dpi),
+      (min-resolution: 1dppx) {
       @content;
    }
 }
