--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -7,7 +7,7 @@
                 <source media="(min-width: 1200px)" srcset="./images/gallery/img1d@1x.jpg 1x, ./images/gallery/img1d@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="./images/gallery/img1t@1x.jpg 1x, ./images/gallery/img1t@2x.jpg 2x">
                 <source media="(max-width: 767px)" srcset="./images/gallery/img1t@1x.jpg 1x, ./images/gallery/img1t@2x.jpg 2x">
-                <img src="./images/gallery/img1t@1x.jpg" alt="Морозиво ріжок з чорницями" />
+                <img class="gallery-img "  src="./images/gallery/img1t@1x.jpg" alt="Морозиво ріжок з чорницями" />
               </picture>
           </a>
         </li>
@@ -18,7 +18,7 @@
                 <source media="(min-width: 1200px)" srcset="./images/gallery/img2d@1x.jpg 1x, ./images/gallery/img2d@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="./images/gallery/img2d@1x.jpg 1x, ./images/gallery/img2d@2x.jpg 2x">
                 <source media="(max-width: 767px)" srcset="./images/gallery/img2d@1x.jpg 1x, ./images/gallery/img2d@2x.jpg 2x">
-                <img src="./images/gallery/img2d@1x.jpg" alt="Морозиво ріжок з посипкою" />
+                <img class="gallery-img " src="./images/gallery/img2d@1x.jpg" alt="Морозиво ріжок з посипкою" />
               </picture>
           </a>
         </li>
@@ -29,7 +29,7 @@
                 <source media="(min-width: 1200px)" srcset="./images/gallery/img3d@1x.jpg 1x, ./images/gallery/img3d@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="./images/gallery/img3d@1x.jpg 1x, ./images/gallery/img3d@2x.jpg 2x">
                 <source media="(max-width: 767px)" srcset="./images/gallery/img3d@1x.jpg 1x, ./images/gallery/img3d@2x.jpg 2x">
-                <img src="./images/gallery/img3d@1x.jpg" alt="Морозиво ріжок з полуницею" />
+                <img class="gallery-img "  src="./images/gallery/img3d@1x.jpg" alt="Морозиво ріжок з полуницею" />
               </picture>
           </a>
         </li>
