--- a/src/partials/franches-modal.html
+++ b/src/partials/franches-modal.html
@@ -1,24 +1,32 @@
 <div class="franchise-modal">
+   <button class="modal-btn" type="button">
+      <svg width="20" height="20">
+         <use href="./images/icons.svg#icon-menu-close"></use>
+      </svg>
+    </button>
     <p class="franchise-modal_descr">Thank you for your interest in owning an Ice Cream shop</p>
     <p class="franchise-modal_text">Due to the overwhelming volume of franchise requests we are not accepting new franchisee applications at this time. Once the application process resumes, we will contact you for further information. Please fill out the contact information below and we will reach out for additional information. We appreciate your patience.</p>
-    <form action="" class="franchise-modal__form">
-        <label for="" class="franchise-modal__label">
-           <input type="text" class="franchise-modal__input" placeholder="Name">
-        </label>
-
-        <label for="" class="franchise-modal__label">
-           <input type="tel" class="franchise-modal__input" placeholder="Phone">
-        </label>
-
-        <label for="" class="franchise-modal__label">
-            <input type="email" class="franchise-modal__input" placeholder="Email">
+    <form class="franchise-modal__form">
+      <div class="franchise-modal__register">
+         <label  class="franchise-modal__label">
+            <input type="text" class="franchise-modal__input" placeholder="Name">
          </label>
+ 
+         <label  class="franchise-modal__label">
+            <input type="tel" class="franchise-modal__input" placeholder="Phone">
+         </label>
+ 
+         <label  class="franchise-modal__label">
+             <input type="email" class="franchise-modal__input" placeholder="Email">
+          </label>
+ 
+         <label  class="franchise-modal__label">
+            <textarea name="comment" class="franchise-modal__input franchise-modal__input-comment"  placeholder="Comment"></textarea>
+         </label>
+      </div>
+        
 
-        <label for="" class="franchise-modal__label">
-           <textarea type="text" class="franchise-modal__input" rows="3" placeholder="Comment"></textarea>
-        </label>
-
-        <button type="submit">Submit</button>
+        <button type="submit" class="buy-now-btn franchise-modal_btn">Submit</button>
      </form>
 </div>
 
