--- a/src/partials/franches-modal.html
+++ b/src/partials/franches-modal.html
@@ -26,7 +26,7 @@
       </div>
         
 
-        <button type="submit" class="buy-now-btn franchise-modal_btn">Submit</button>
+        <button type="submit" class="submit-btn">Submit</button>
      </form>
 </div>
 
