--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,15 +1,29 @@
-<div class="customer">
+<div class="customer container">
    <div class="customer__card">
       <picture>
-         <source media="(min-width:320px)" srcset="
+         <source
+            media="(min-width:320px)"
+            srcset="
                ./images/customer_review/img1d@1x.webp 1x,
                ./images/customer_review/img1d@2x.webp 2x
-            " type="image/webp" />
-         <source media="(min-width: )" srcset="
+            "
+            type="image/webp"
+         />
+         <source
+            media="(min-width: )"
+            srcset="
                ./images/customer_review/img1d@1x.jpg 1x,
                ./images/customer_review/img1d@2x.jpg 2x
-            " type="image/jpg" />
-         <img class="customer__card-img" src="./images/customer_review/img1d@1x.webp" alt="" width="85" height="85" />
+            "
+            type="image/jpg"
+         />
+         <img
+            class="customer__card-img"
+            src="./images/customer_review/img1d@1x.webp"
+            alt=""
+            width="85"
+            height="85"
+         />
       </picture>
       <div class="customer__card-reviews">
          <p class="customer__card-text">
@@ -22,15 +36,29 @@
    </div>
    <div class="customer__card">
       <picture>
-         <source media="(min-width: )" srcset="
+         <source
+            media="(min-width: )"
+            srcset="
                ./images/customer_review/img2d@1x.webp 1x,
                ./images/customer_review/img2d@2x.webp 2x
-            " type="image/webp" />
-         <source media="(min-width: )" srcset="
+            "
+            type="image/webp"
+         />
+         <source
+            media="(min-width: )"
+            srcset="
                ./images/customer_review/img2d@1x.jpg 1x,
                ./images/customer_review/img2d@2x.jpg 2x
-            " type="image/jpg" />
-         <img class="customer__card-img" src="./images/customer_review/img2d@1x.webp" alt="" width="85" height="85" />
+            "
+            type="image/jpg"
+         />
+         <img
+            class="customer__card-img"
+            src="./images/customer_review/img2d@1x.webp"
+            alt=""
+            width="85"
+            height="85"
+         />
       </picture>
       <div class="customer__card-reviews">
          <p class="customer__card-text">
@@ -42,15 +70,29 @@
    </div>
    <div class="customer__card">
       <picture>
-         <source media="(min-width: )" srcset="
+         <source
+            media="(min-width: )"
+            srcset="
                ./images/customer_review/img3d@1x.webp 1x,
                ./images/customer_review/img2d@2x.webp 2x
-            " type="image/webp" />
-         <source media="(min-width: )" srcset="
+            "
+            type="image/webp"
+         />
+         <source
+            media="(min-width: )"
+            srcset="
                ./images/customer_review/img3d@1x.jpg 1x,
                ./images/customer_review/img3d@2x.jpg 2x
-            " type="image/jpg" />
-         <img class="customer__card-img" src="./images/customer_review/img3d@1x.webp" alt="" width="85" height="85" />
+            "
+            type="image/jpg"
+         />
+         <img
+            class="customer__card-img"
+            src="./images/customer_review/img3d@1x.webp"
+            alt=""
+            width="85"
+            height="85"
+         />
       </picture>
       <div class="customer__card-reviews">
          <p class="customer__card-text">
@@ -63,16 +105,30 @@
    </div>
    <div class="customer__card">
       <picture>
-         <source media="(min-width: )" srcset="
+         <source
+            media="(min-width: )"
+            srcset="
                ./images/customer_review/img4d@1x.webp 1x,
                ./images/customer_review/img4d@2x.webp 2x
-            " type="image/webp" />
-         <source media="(min-width: )" srcset="
+            "
+            type="image/webp"
+         />
+         <source
+            media="(min-width: )"
+            srcset="
                ./images/customer_review/img4d@1x.jpg 1x,
                ./images/customer_review/img4d@2x.jpg 2x
-            " type="image/jpg" />
+            "
+            type="image/jpg"
+         />
 
-         <img class="customer__card-img" src="./images/customer_review/img4d@1x.webp" alt="" width="85" height="85" />
+         <img
+            class="customer__card-img"
+            src="./images/customer_review/img4d@1x.webp"
+            alt=""
+            width="85"
+            height="85"
+         />
       </picture>
       <div class="customer__card-reviews">
          <p class="customer__card-text">
