--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -25,7 +25,7 @@
    <section class="container hero">
         <div class="hero__positions">
             <div class="hero__info">
-                <h1 class="hero__title">ice cream made with passion</h1>
+                <h1 class="hero__title">ice cream made with <span>passion</span></h1>
 
                 <ul class="hero__list-anchor">
                     <li class="hero__item-anchor">
@@ -37,8 +37,8 @@
                 </ul>
             </div>
 
-            <div class="hero__lorem-ipsum">
-         <picture class="hero__img">
+        <div class="hero__lorem-ipsum">
+            <picture class="hero__img">
             <!-- desc -->
             <source srcset="
                 ./images/header/img2d@1x.webp    1x,
@@ -58,19 +58,19 @@
                 ./images/header/img2t@2x.jpg    2x
                   " type="image/jpeg" media="(max-width: 1199px)">
             <img src="./images/header/img2t@1x.jpg" alt="тарілка з (кульковим морозивом * 9)">
-         </picture>
-         <div class="hero__lorem">
-            <p class="hero__exscerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            </picture>
+            <div class="hero__lorem">
+                <p class="hero__exscerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et</p>
-            <svg class="hero__arrow" height="16" width="40">
-                <use href="./images/icons.svg#icon-arrow-default" class="hero__arrow-use"></use>
-            </svg>
-         </div>
+                <svg class="hero__arrow" height="16" width="40">
+                    <use href="./images/icons.svg#icon-arrow-default" class="hero__arrow-use"></use>
+                </svg>
+            </div>
          
             </div>
         </div>
         <div class="hero__company-info">
-         <picture class="hero__img-animation">
+            <picture class="hero__img-animation">
             <!-- desc -->
             <source srcset="
                 ./images/header/img1d@1x.webp    1x,
@@ -98,20 +98,18 @@
                 ./images/header/img1m@1x.jpg    1x,
                 ./images/header/img1m@2x.jpg    2x
                   " type="image/jpeg" media="(max-width: 767px)">
-            <img src="./images/header/img1d@1x.jpg" alt="упоротий змій-морозинич">
-         </picture>
+            <img src="./images/header/img1m@1x.jpg" alt="упоротий змій-морозинич">
+            </picture>
 
-         <div class="hero__cafe-info">
+            <!-- <div class="hero__cafe-info"> -->
             <ul class="hero__list-cafe">
-               <li class="hero__item-cafe">
-                  <p class="hero__numbers">16</p>
-                  <p class="hero__text">cafes</p>
-               </li>
-               <li class="hero__item-cafe">
-                  <p class="hero__numbers">23</p>
-                  <p class="hero__text">food trucks</p>
-               </li>
+                <li class="hero__item-cafe">
+                    <p class="hero__text"><span class="hero__numbers">16</span><br>cafes</p>
+                </li>
+                <li class="hero__item-cafe">
+                    <p class="hero__text"><span class="hero__numbers">23</span><br>food trucks</p>
+                </li>
             </ul>
-         </div>
+         <!-- </div> -->
         </div>
    </section>
