--- a/src/partials/about-modal.html
+++ b/src/partials/about-modal.html
@@ -1,4 +1,4 @@
-<div class="modal-content">
+<div class="modal-content visually-hidden">
    <span class="modal-content__title">How it’s made?</span>
    <iframe src="https://www.youtube.com/embed/8WEMZ86Eho8?controls=0" class="modal-content__map"
       title="YouTube video player" frameborder="0"
