--- a/src/sass/components/modals/_location-modal.scss
+++ b/src/sass/components/modals/_location-modal.scss
@@ -5,7 +5,6 @@
       $border: 2px solid getColor($key: 'accent'),
       $shadow: 0,
       $bg: getColor($key: 'txt-white'));
-   @include flex($ai: center, $jc: center, $gap: 0, $fd: column);
    padding: 32px 40px;
    @include centerAbsolute;
 
@@ -32,5 +31,24 @@
 
    &__text {
       @include fonts($fs: 16px, $lh: 22px);
+   }
+}
+
+@include mobile() {
+   .modal-content {
+      @include block($w: 280px,
+         $h: auto,
+         $radius: 10px,
+         $border: 2px solid getColor($key: 'accent'),
+         $shadow: 0,
+         $bg: getColor($key: 'txt-white'));
+      padding: 28px;
+      @include flex($fd: column, $gap: 20px);
+
+      &__map {
+         border-radius: 10px;
+         width: 224px;
+         height: 200px;
+      }
    }
 }
