fix modal franchise

--- a/src/sass/components/modals/_franchise-modal.scss
+++ b/src/sass/components/modals/_franchise-modal.scss
@@ -85,9 +85,9 @@
    outline: transparent;
    cursor: pointer;
    @include desktop {
-      width: 100%;
+      width: 368px;
       height: 42px;
-      padding: 11px 152px 11px 16px;
+      padding: 11px 16px 11px 16px;
    }
 }
 .franchise-modal__input-comment {
