--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -1,31 +1,48 @@
-.gallery-item {
-    margin-left: 20px;
-    margin-right: 20px;
-    @media screen and (min-width: 768px) {
-     margin-left: 32px;
-    margin-right: 32px;
-     }
-     @media screen and (min-width: 1200px) {
-         margin-left: 94px;
-        margin-right: 94px;
-         }
+.gallery {
+  margin-top: -24px;
+  
+  @include tablet() {
+    margin-top: -164px;
+  }
+  @include desktop () {
+    margin-top: -94px;
+  }
+  // &-item {
+  //   margin-left: 20px;
+  //   margin-right: 20px;
+
+  //   @include tablet() {
+  //    margin-left: 32px;
+  //   margin-right: 32px;
+  //    }
+  //   @include desktop () {
+  //       margin-left: 94px;
+  //       margin-right: 94px;
+  //        }
+  //       }
+
+  &-img {
+    
+      width: 280px;  
+      height: 130px;   
+      border-radius: 7.41px;
+      margin: 0 auto;
+            
+      
+      @include tablet() {
+        width: 704px;  
+        height: 320px;   
+        border-radius: 18px;
         }
+        @include desktop () {
+            width: 1013px;  
+            height: 422px;   
+            border-radius: 24px;
+            }
+      }      
+
+}
+
+
  
- .gallery-img {
-   width: 280px;  
-   height: 130px;   
-   border-radius: 7.41px;
-   margin: auto;
-   
-   
-   @media screen and (min-width: 768px) {
-     width: 704px;  
-     height: 320px;   
-     border-radius: 18px;
-     }
-     @media screen and (min-width: 1200px) {
-         width: 1013px;  
-         height: 422px;   
-         border-radius: 24px;
-         }
-   }
+ 
