--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -140,7 +140,7 @@
          <button class="contacts-btn__btn" type="button">Our Locations</button>
       </li>
       <li class="contacts-btn__item">
-         <button class="contacts-btn__btn" type="button">Franchise</button>
+         <button class="contacts-btn__btn" type="button" data-modal-franches-open>Franchise</button>
       </li>
    </ul>
 </section>
