--- a/src/sass/layouts/_header-hero.scss
+++ b/src/sass/layouts/_header-hero.scss
@@ -1,3 +1,41 @@
+.body--hidden {
+    overflow: hidden;
+
+    & header {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        right: 0;
+        top: 0;
+        flex-direction: column;
+        justify-content: flex-start;
+
+        visibility: visible;
+        pointer-events: all;
+        overflow: scroll;   
+        z-index: 1;
+        background-color: getColor('background');
+    }
+
+    & .btn__modal {
+        @include tablet {
+            display: none;
+        }
+    }
+
+    & .btn__modal-outside {
+        display: none;
+    }
+
+    & .btn-menu {
+        @include tablet {
+            position: absolute;
+
+        }
+    }
+}
+
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -6,19 +44,25 @@
     flex-direction: column;
     align-items: center;
     padding: 0 20px;
+    
+    @include tablet {
+        padding-top: 20px;
+        flex-direction: row;
+    }
 
     @include desktop {
         flex-direction: row;
+        padding: 0;
     }
 }
 
 .logo {
-    // position: absolute;
-    // left: 20px;
-    // top: 12px;
     margin-top: 12px;
-    // margin-left: 20px;
     align-self: flex-start;
+
+    @include tablet {
+        margin-top: 0;
+    }
 
     @include desktop {
         margin-top: 0;
@@ -35,31 +79,28 @@
     }
 }
 
-.nav {
+.nav.is-open {
     display: flex;
+    justify-content: space-between;
+    height: 100%;
+
+}
+
+.nav {
     align-items: center;
     margin-top: 50px;
     flex-direction: column;
+    display: none;
 
-    @include mobile {
-        & .btn__modal {
-            display: none;
-        }
+    @include tablet {
+        margin-top: 70px;
     }
 
     @include desktop {
-        flex-direction: row;
-        margin-top: 0;
-        justify-content: space-between;
-
-        & .btn__modal {
-            display: none;
-        }
+        display: block;
+        margin-top: auto;
+        margin-bottom: auto;
     }
-
-
-    
-    // display: none;
 }
 
 .btn__modal {
@@ -68,13 +109,28 @@
     border-radius: 10px;
     width: 150px;
     margin-top: auto;
-    // margin-top: 150px;
-    // margin-bottom: 60px;
-    // display: none;
+    margin-bottom: 60px;
     
     @include desktop {
-        margin-bottom: auto;
-        margin-top: auto;
+        display: none;
+    }
+}
+
+.btn__modal-outside {
+    padding: 12px 34px;
+    background-color: getColor(accent);
+    border-radius: 10px;
+    width: 150px;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: none;
+
+    @include tablet {
+        display: block;
+    }
+
+    @include desktop {
+        display: block;
     }
 }
 
@@ -82,6 +138,10 @@
     display: flex;
     gap: 32px;
     flex-direction: column;
+
+    @include tablet {
+        gap: 40px;
+    }
 
     @include desktop {
         flex-direction: row;
@@ -91,6 +151,10 @@
 .nav__item {
     display: flex;
     justify-content: center;
+
+    @include tablet {
+        justify-content: center;
+    }
 }
 
 .nav__link {
@@ -109,6 +173,7 @@
     @include tablet {
         font-size: 48px;
         line-height: 59px;
+
     }
 
     @include desktop {
@@ -121,16 +186,45 @@
     background-color: unset;
     width: 32px;
     height: 32px;
+    z-index: 2;
 
     position: absolute;
     right: 20px;
     top: 16px;
     fill: getColor('txt-white');
 
+    @include tablet {
+        position: relative;
+        right: 0;
+        top: 0;
+        margin-left: auto;
+        margin-right: 32px;
+    }
+
+    &.is-open {
+        right: 20px;
+        top: 16px;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    &.is-open .svg-open {
+        display: none;
+    }
+    &.is-open .svg-close {
+        display: block;
+    }
+
+    & .svg-close {
+        display: none;
+    }
+
     @include desktop {
         display: none;
     }
 }
+
+
 
 
 // hero 
@@ -143,21 +237,42 @@
     position: relative;
     margin-top: 62px;
 
+    background-image: url(../images/header/points__m.png);  
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: contain;
+        
     @include tablet {
         flex-direction: row;
-        margin-top: 28px;
+        margin-top: 28px;        
+
+        background-image: url(../images/header/points__t.png);
     }
 
     @include desktop {
         flex-direction: row;
         margin-top: 28px;
+        padding: 0;
+
+        background-image: url(../images/header/points__d.png);
     }
+
+
 }
 
 .hero__positions {
     display: flex;
     flex-direction: column;
     padding-top: 12px;
+    margin-bottom: 65px;
+
+    @include tablet {
+        margin-bottom: 10px;
+    }
+
+    @include mobile {
+        margin-bottom: -30px;
+    }
 }
 
 .hero__info {
@@ -196,6 +311,10 @@
 
     @include mobile {
         margin-top: 32px;
+    }
+
+    @include desktop {
+        margin-top: 28px;
     }
 }
 
@@ -284,17 +403,27 @@
 }
 
 .hero__company-info {
+    display: flex;
     margin-left: auto;
+    justify-content: flex-end;
+    position: relative;
 }
 
 .hero__img-animation {
     display: inline-block;
-    width: 270px;
     height: auto;
-    margin-left: auto;
-    position: absolute;
     bottom: 0;
+    right: 0;
+    z-index: -1;
     
-    display: none;
+    @include tablet {
+        width: 370px;
+        position: absolute;
+    }
+    
+    @include desktop {
+        position: absolute;
+        width: 620px;
+    }
 }
 
