--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,23 +1,23 @@
 <header class="container header">
-   <a href="" class="logo">
+    <a href="" class="logo">
       <img src="./images/header/logo.png" alt="логотип компанії" class="logo__img">
-   </a>
-   <nav class="nav">
-       <ul class="nav__list">
+    </a>
+    <nav class="nav" data-menu>
+        <ul class="nav__list">
            <li class="nav__item"><a href="" class="nav__link">Home</a></li>
            <li class="nav__item"><a href="" class="nav__link">How it’s made?</a></li>
            <li class="nav__item"><a href="" class="nav__link">Our products</a></li>
            <li class="nav__item"><a href="" class="nav__link">Contact</a></li>
         </ul>
-        <button type="button" class="btn-menu">
-            <svg width="32" height="32">
-                <use href="./images/icons.svg#icon-menu-open"></use>
-                <use href="./images/icons.svg#icon-menu-close"></use>
-            </svg>
-        </button>
         <button type="button" class="btn__modal">Buy now</button>
-   </nav>
-   <button type="button" class="btn__modal">Buy now</button>
+    </nav>
+    <button type="button" class="btn-menu" data-menu-button>
+        <svg width="32" height="32">
+            <use href="./images/icons.svg#icon-menu-open" class="svg-open"></use>
+            <use href="./images/icons.svg#icon-menu-close" class="svg-close"></use>
+        </svg>
+    </button>
+   <button type="button" class="btn__modal-outside">Buy now</button>
 </header>
 
 <!-- hero -->
@@ -37,68 +37,48 @@
                 </ul>
             </div>
 
-        <div class="hero__lorem-ipsum">
-            <picture class="hero__img">
+            <div class="hero__lorem-ipsum">
+                <picture>
             <!-- desc -->
             <source srcset="
-                ./images/header/img2d@1x.webp    1x,
-                ./images/header/img2d@2x.webp    2x
-                  " type="image/webp" media="(min-width: 1200px)">
-            <source srcset="
-                ./images/header/img2d@1x.jpg    1x,
-                ./images/header/img2d@2x.jpg    2x
-                  " type="image/jpeg" media="(min-width: 1200px)">
+                ./images/header/ice-cream__d.png    1x,
+                ./images/header/ice-cream__d@2x.png    2x
+                  " type="image/png" media="(min-width: 1200px)">
             <!-- tablet -->
             <source srcset="
-                ./images/header/img2t@1x.webp    1x,
-                ./images/header/img2t@2x.webp    2x
-                  " type="image/webp" media="(min-width: 768px)">
-            <source srcset="
-                ./images/header/img2t@1x.jpg    1x,
-                ./images/header/img2t@2x.jpg    2x
-                  " type="image/jpeg" media="(max-width: 1199px)">
-            <img src="./images/header/img2t@1x.jpg" alt="тарілка з (кульковим морозивом * 9)">
-            </picture>
-            <div class="hero__lorem">
-                <p class="hero__exscerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et</p>
-                <svg class="hero__arrow" height="16" width="40">
-                    <use href="./images/icons.svg#icon-arrow-default" class="hero__arrow-use"></use>
-                </svg>
-            </div>
+                ./images/header/ice-cream__t.png    1x,
+                ./images/header/ice-cream__t@2x.png    2x
+                  " type="image/png" media="(max-width: 1199px)">
+            <img src="./images/header/ice-cream__t.png" alt="тарілка з (кульковим морозивом * 9)" class="hero__img">
+                </picture>
+                <div class="hero__lorem">
+                    <p class="hero__exscerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et</p>
+                    <svg class="hero__arrow" height="16" width="40">
+                        <use href="./images/icons.svg#icon-arrow-default" class="hero__arrow-use"></use>
+                    </svg>
+                </div>
          
             </div>
         </div>
         <div class="hero__company-info">
-            <picture class="hero__img-animation">
+            <picture>
             <!-- desc -->
             <source srcset="
-                ./images/header/img1d@1x.webp    1x,
-                ./images/header/img1d@2x.webp    2x
-                  " type="image/webp" media="(min-width: 1200px)">
-            <source srcset="
-                ./images/header/img1d@1x.jpg    1x,
-                ./images/header/img1d@2x.jpg    2x
-                  " type="image/jpeg" media="(min-width: 1200px)">
+                ./images/header/ice-cream-cone__d.png    1x,
+                ./images/header/ice-cream-cone__d@2x.png    2x
+                  " type="image/png" media="(min-width: 1200px)">
             <!-- tablet -->
             <source srcset="
-                ./images/header/img1t@1x.webp    1x,
-                ./images/header/img1t@2x.webp    2x
-                  " type="image/webp" media="(min-width: 768px)">
-            <source srcset="
-                ./images/header/img1t@1x.jpg    1x,
-                ./images/header/img1t@2x.jpg    2x
-                  " type="image/jpeg" media="(min-width: 768px)">
+                ./images/header/ice-cream-cone__t.png    1x,
+                ./images/header/ice-cream-cone__t@2x.png    2x
+                  " type="image/png" media="(min-width: 768px)">
             <!-- mobile -->
             <source srcset="
-                ./images/header/img1m@1x.webp    1x,
-                ./images/header/img1m@2x.webp    2x
-                  " type="image/webp" media="(max-width: 767px)">
-            <source srcset="
-                ./images/header/img1m@1x.jpg    1x,
-                ./images/header/img1m@2x.jpg    2x
-                  " type="image/jpeg" media="(max-width: 767px)">
-            <img src="./images/header/img1m@1x.jpg" alt="упоротий змій-морозинич">
+                ./images/header/ice-cream-cone__m.png    1x,
+                ./images/header/ice-cream-cone__m@2x.png    2x
+                  " type="image/png" media="(max-width: 767px)">
+            <img src="./images/header/ice-cream-cone__m.png" alt="упоротий змій-морозинич" class="hero__img-animation">
             </picture>
 
             <!-- <div class="hero__cafe-info"> -->
